src/scss/components/_navbar.scss
.nav {
  position: relative;
  padding: 0.5rem 1rem;
  background-color: $colour-background-light;
  border-bottom: 2px solid $colour-background-dark;
  min-height: calculate-rem(88px);
  height: 88px;

  &-fixed {
    position: fixed;
    top: 0;
    left: 0;
    right: 0;
    z-index: 1000;
  }

  &-wrapper {
    display: flex;
    flex-wrap: nowrap;
    flex-direction: row;
    justify-content: flex-end;
    align-items: center;
    height: 100%;
  }

  &-logo {
    position: relative;
    color: $colour-text;
    margin-right: auto;

    & > h1 {
      @include calculate-font-size(18px);
      font-size: calculate-rem(20px);
      font-weight: 700;
    }
  }

  &-mobile-toggle {
    display: none;
    border: 0;
    background: transparent;
    color: $colour-text;
    font-size: calculate-rem(24px);
    cursor: pointer;

    @media (max-width: 767px) {
      display: inline-block;
      padding: 0.5rem;
    }
  }

  &-menu {
    display: flex;
    flex-direction: row;
    flex-wrap: nowrap;
    list-style: none;

    &-item {
      display: inline-block;
      margin: 0 1rem;

      &-link {
        position: relative;
        color: $colour-text-light;
        font-weight: 500;
        font-size: calculate-rem(16px);

        &::before {
          content: '';
          position: absolute;
          display: block;
          bottom: -0.5em;
          left: 0;
          right: 0;
          height: 2px;
          background: $colour-text-light;
          transform: scale(0, 1);
          transform-origin: bottom;
          transition: transform 0.2s ease-in-out;
        }

        &:hover::before {
          transform: scale(1, 1);
        }

        &_social {
          border-radius: 60px;
          box-shadow: 0px 0px 2px rgb(179, 179, 179);
          padding: 0.5rem;
          transition: all 0.3s ease;
          color: $colour-text;

          &:hover {
            box-shadow: 0px 0px 2px rgb(73, 73, 73);
          }

          &::before {
            display: none;
          }
        }
      }

      &-divider::before {
        content: '|';
        margin-left: 1rem;
        margin-right: 1rem;
        color: $colour-text;

        @media (max-width: 767px) {
          display: none;
        }
      }

      &-divider_social::before {
        margin-left: 1rem;
        margin-right: 1.4rem;
      }

      &_social {
        margin: 0 0.5rem;
        @include calculate-font-size(16px);

        @media (max-width: 767px) {
          display: none;
        }
      }
    }

    @media (max-width: 767px) {
      display: none;
    }
  }

  @media (max-width: 767px) {
    &-mobile-toggled {
      height: calculate-rem(240px);

      .nav-wrapper {
        display: flex;
        flex-wrap: wrap;
        align-items: center;
        justify-content: space-between;
        margin-top: calculate-rem(12px);

        .nav-menu {
          display: flex;
          flex-direction: column;
          padding-left: 0;
          margin-bottom: 0;
          margin-right: auto;
          flex-basis: 100%;

          &-item {
            margin-left: 0;
            margin-right: 0;

            &-link {
              display: inline-block;
              width: 100%;
              padding: 1rem 0;

              &:hover {
                background-color: $colour-background-dark;
              }

              &:hover::before {
                display: none;
              }
            }
          }
        }
      }
    }
  }
}

